--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- partial:index.partial.html -->
 <div id="app">
     <section class="wrapper">   
-      <h1><a href="https://github.com/simo-oumaandi">The Password Genie</a></h1>
+      <h1><a href="https://github.com/simo-oumaandi" id="title">The Password Genie</a></h1>
       <div class="password-box">
         <span id="password" class="password" v-on:click="copyToClipboard">{{ password }}</span>
         <span class="regenerate-password" v-on:click="generatePassword"></span>
